# cloud-build-notifier

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  config.example.yaml
src/: args.rs  config.rs  event.rs  fetch_log.rs  lib.rs  main.rs  notify.rs  slack.rs  validate.rs
src/gcp/: auth.rs  logging.rs  mod.rs  project.rs  pubsub.rs  secret_manager.rs  storage.rs
